<resources>
    <string name="app_name">Pocket Diary</string>
    <string name="welcomeA_txtTitle">Willkommen zu</string>
    <string name="welcomeA_txtTitleName">Pocket Diary</string>
    <string name="welcomeA_txtBody">Pocket Diary ist dein ganz persönliches digitales Tagebuch. Notiere wichtige Gedanken, dokumentiere wertvolle Erinnerungen oder reflektiere einfach deinen Tag.</string>
    <string name="welcomeB_txtBody">Tägliche Benachrichtigungen erinnern dich daran, Einträge regelmäßig zu erstellen. Du kannst aber selbstverständlich auch nur dann Einträge erstellen, wenn dir danach ist.</string>
    <string name="txtBtnBack">zurück</string>
    <string name="welcomeC_txtBody">\"Unser Leben ist das Produkt unserer Gedanken.\" (Marcus Aurelius 180 n. Chr.)</string>
    <string name="welcomeD_txtBody"> In diesem Sinne: Nimm dir also ruhig Zeit für dich selbst und lasse deinen Gedanken freien Lauf. </string>
    <string name="name_txtEditName">Benutzername</string>
    <string name="name_txtViewAskName">Wie dürfen wir dich nennen?</string>
    <string name="btnContentDescription_next">weiter</string>
    <string name="setting_txtViewTitleNameSetting">Profilname</string>
    <string name="setting_txtViewTitleReminder">Erinnerung</string>
    <string name="btnDescriptionSave">Speichern</string>

    <string name="newEntry_howAreYou">Wie geht es dir?</string>
    <string name="newEntry_iconGood3">Lachendes Gesicht mit zugekniffenen Augen</string>
    <string name="newEntry_iconGood2">Lachendes Gesicht mit offenen Augen</string>
    <string name="newEntry_iconGood1">Lächelndes Gesicht</string>
    <string name="newEntry_iconBad3">Neutrales ausdrucksloses Gesicht</string>
    <string name="newEntry_iconBad2">Trauriges Gesicht</string>
    <string name="newEntry_iconBad1">Böses Gesicht</string>
    <string name="newEntry_date">TT.MM.JJJJ</string>
    <string name="newEntryNote_txtView">Möchtest du noch etwas notieren?</string>
    <string name="newEntryNote_TextInputLayout_hint">Notizen</string>
    <string name="newEntryAction_txtView">Was hast du heute gemacht?</string>
    <string name="homeScree_fabBtnDesciption">Neuen Eintrag erstellem</string>
    <string name="buttomBar_btnDescriptionAchievements">Achievements</string>
    <string name="btnGameDescription">Schaltfläche das ein Spiel Controller anzeigt</string>
    <string name="btnLoveDescription">Schaltfläche das ein Herz anzeigt</string>
    <string name="btnFFoodDescription">Schaltfläche das Essen anzeigt</string>
    <string name="btnBasketballDescription">Schaltfläche das ein Basketball anzeigt</string>
    <string name="btnHomeDescription">Schaltfläche das einr Couch anzeigt</string>
    <string name="btnFriendsDescription">Schaltfläche das eine mehrere Menschen anzeigt</string>
    <string name="btnMusicDescription">Schaltfläche das ein Radio anzeigt</string>
    <string name="btnShoppingDescription">Schaltfläche das ein Einkaufswagen anzeigt</string>
    <string name="btnBriefcaseDescription">Schaltfläche das ein Koffer anzeigt</string>
    <string name="pref_previously_started">false</string>
    <string name="imageViewDescription">Deine Erfolge</string>
    <string name="imgViewMoodDescription">Deine Mood</string>
    <string name="imgViewAction1Description">Deine erste Tagesaktion</string>
    <string name="imgViewAction2Description">Deine zweite Tagesaktion</string>
    <string name="imgViewAction3Description">Deine dritte Tagesaktion</string>
    <string name="txtViewEntryDateExample">17.12.2020</string>
    <string name="txtViewEntryTextExample">Heute ist ein toller Tag gewes..</string>
    <string name="txtViewChoose">Wähle maximal drei Aktivitäten aus.</string>
    <string name="btnImgSave_Description">Speichern</string>
    <string name="randomTextExample">Lorem Ipsum mother</string>
    <string name="txtExample_achievements">Fleißige Biene!</string>
    <string name="txtExample_Body">Du hast schon 14 Einträge geschrieben!</string>
    <string name="imgbtn_description_homebutton">home</string>
    <string name="imgDescription_logo">Logo</string>
    <string name="AppName">Pocket Diary</string>
    <string name="introTutorial">alle Funktionen kennenlernst, gibt es zunächst ein kleines Tutorial.</string>
    <string name="tutrorial_damit_du">Damit du,</string>
    <string name="contentDescriptionAchievement">Beispiel Vorschau einzelner Elemente : Achievement</string>
    <string name="contentDescriptionEntry">Beispiel Vorschau einzelner Elemente : Entry</string>
    <string name="contentDescriptionPlus">Beispiel Vorschau einzelner Elemente : Neuer Eintrag</string>
    <string name="contentDescription_loeschen">Löschen</string>
    <string name="itemTitle">Achievements</string>
    <string name="developersNames">Saša Bojanic, Dajana Denjiz, Ivan Dukov, Huyen Pham</string>

</resources>