<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/txtWelcomeTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/welcomeA_txtTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:textColor="@color/primaryDarkColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/txtTitle"
            app:layout_constraintStart_toStartOf="@id/guidelineV"
            app:layout_constraintTop_toTopOf="@id/guidelineH" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/welcomeA_txtTitleName"
            android:textAllCaps="true"
            android:textColor="@color/primaryDarkColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/txtBody"
            app:layout_constraintStart_toStartOf="@id/guidelineV"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcomeTo" />


        <TextView
            android:id="@+id/txtBody"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/source_sans_pro"
            android:scrollbars="vertical"
            android:text="@string/welcomeA_txtBody"
            android:textColor="@color/primaryDarkColor"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/guidelineV"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#00000000"
            android:contentDescription="@string/btnContentDescription_next"
            android:fontFamily="@font/source_sans_pro"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:tint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_arrow_forward_ios_black_18dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07633588"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23416789"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.39"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>