<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:backgroundTint="#28A8A2A2"
    android:orientation="vertical"
    android:padding="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgView14EntriesAch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/imageViewDescription"
            android:padding="13dp"
            android:tintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_emoji_nature_24px" />

        <TextView
            android:id="@+id/txtViewTitleAch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:text="@string/txtExample_achievements"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />


        <TextView
            android:id="@+id/txtViewBodyAch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="0dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:text="@string/txtExample_Body"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
            tools:ignore="RtlCompat" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>